Working site with style sheets connected

--- a/Fuzzypaws.html
+++ b/Fuzzypaws.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html> 
 <Html>
 <head>
+  <link rel="stylesheet" href="Style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="Style.css">
+  
 </head>
 
 <body>
@@ -67,7 +68,7 @@
   
     </section>
     
-    <Style>
+    <!-- <Style>
 
       
 body {
@@ -156,7 +157,7 @@ h2 {
   flex-direction: row;
 /*   font-size: 250px; */
 }
-    </Style>
+    </Style> -->
 
 
   </Main>
